logs/pywurfl.log
Listing '.'...
Listing './bin'...
Compiling './bin/wurfl2python.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Levenshtein'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_Levenshtein-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/pywurfl'...
Compiling './lib/python3.5/site-packages/pywurfl/__init__.py'...
***   File "./lib/python3.5/site-packages/pywurfl/__init__.py", line 129
    self._name_test_re = re.compile(ur'^(_|[a-z])(_|[a-z]|[0-9])+$')
                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pywurfl/algorithms'...
Listing './lib/python3.5/site-packages/pywurfl/algorithms/wurfl'...
Compiling './lib/python3.5/site-packages/pywurfl/algorithms/wurfl/normalizers.py'...
***   File "./lib/python3.5/site-packages/pywurfl/algorithms/wurfl/normalizers.py", line 45
    babel_fish_re = re.compile(ur"\s*\(via babelfish.yahoo.com\)\s*", re.UNICODE)
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pywurfl/ql.py'...
***   File "./lib/python3.5/site-packages/pywurfl/ql.py", line 206
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pywurfl-7.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
